--- a/templates/portfolios/edit_form.html
+++ b/templates/portfolios/edit_form.html
@@ -22,6 +22,11 @@ Edit Portfolio
                     {% bootstrap_form form %}
                     <p><button type="submit" id="create-portfolio-button" class="btn btn-success">Update</button>
                         <a type="button" class="btn btn-default" href="/portfolios">Cancel</a>
+                        {# Show delete button if portfolio is empty and user can change portfolio #}
+                        {% if can_change_portfolio and portfolio.projects.all|length == 0 %}
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="/portfolios/{{ portfolio.id }}/delete" id="delete_portfolio_submit"  class="btn btn-danger btn-submit confirm-delete" type="submit" onclick="return confirm('Are you sure you want to delete portfolio \'{{ portfolio.title}}\'?\n\nThis cannot be undone.')">Delete</a>
+                        {% endif %}
                     </p>
                 </form>
             </div>
