--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -32,10 +32,9 @@ Remove contextbar from top of page
     <div class="container">
     <div class="portfolio-main">
         {% if can_change_portfolio %}
-            <a id="edit-portfolio" href='{% url "edit_portfolio" portfolio.id %}' class="btn btn-success">Edit Portfolio</a>
+            <a id="edit-portfolio" href='{% url "edit_portfolio" portfolio.id %}' class="btn btn-success" aria-label="Edit portfolio">Edit Portfolio</a>
         {% endif %}
-        <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#" class=" btn
-        btn-success">Start a project</a>
+        <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#" class=" btn btn-success">Start a project</a>
         {% if can_invite_to_portfolio %}
             <a href="#" onclick="invite_user_into_portfolio(); return false;" id="grant-portfolio-access"
                class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Grant access to member</a>
