--- a/templates/portfolios/detail.html
+++ b/templates/portfolios/detail.html
@@ -31,7 +31,7 @@ Remove contextbar from top of page
     <div class="portfolio-top">
     <div class="container">
     <div class="portfolio-main">
-        {% if can_change_portfolio %}
+        {% if can_edit_portfolio %}
             <a id="edit-portfolio" href='{% url "edit_portfolio" portfolio.id %}' class="btn btn-success" aria-label="Edit portfolio">Edit Portfolio</a>
         {% endif %}
         <a id="new-project" onclick="show_select_portfolio_modal(); return false;" href="#" class=" btn btn-success">Start a project</a>
