--- a/templates/portfolios/edit_form.html
+++ b/templates/portfolios/edit_form.html
@@ -23,7 +23,7 @@ Edit Portfolio
                     <p><button type="submit" id="edit_portfolio_submit" class="btn btn-success" href="{% url "edit_portfolio" portfolio.id %}" aria-label="Update portfolio">Update</button>
                         <a type="button" class="btn btn-default" href={% url "list_portfolios" %}>Cancel</a>
                         {# Show delete button if portfolio is empty and user can change portfolio #}
-                        {% if can_change_portfolio and portfolio.projects.all|length == 0 %}
+                        {% if can_edit_portfolio and portfolio.projects.all|length == 0 %}
                             <a href='{% url "delete_portfolio" portfolio.id %}' id="delete_portfolio_submit"  class="btn btn-danger btn-submit confirm-delete" type="submit" onclick="return confirm('Are you sure you want to delete portfolio \'{{ portfolio.title}}\'?\n\nThis cannot be undone.')">Delete</a>
                         {% endif %}
                     </p>
