reinstating clean method in Portfolioform and checking if it is a new portfolio or editing/deletion. If the latter than shouldn't use the clean method to allow description name change while maintaning title.

--- a/templates/portfolios/form.html
+++ b/templates/portfolios/form.html
@@ -19,7 +19,7 @@ Welcome to Compliance Automation
             <div class="well">
                 <form method="post">
                     {% csrf_token %}
-                    <input type=hidden name=action value=neworg>
+                    <input type=hidden name=action value=newportfolio>
                     {% bootstrap_form form %}
                     <p><button type="submit" id="create-portfolio-button" class="btn btn-success">Next &raquo;</button></p>
                 </form>
