--- a/templates/project_settings.html
+++ b/templates/project_settings.html
@@ -410,7 +410,7 @@ h3.question-group-title {
           </div>
           <div class="col-sm-12">
             {# export #}
-              <form method="post" action="{% url "export_project" project.id %}" style="display: inline-block; margin: 0; padding: 0;">{% csrf_token %}
+              <form method="post" action="{% url "export_project_questionnaire" project.id %}" style="display: inline-block; margin: 0; padding: 0;">{% csrf_token %}
                 <button class="btn btn-default">
                   <span class="glyphicon glyphicon-share" style="margin-right: .25em"></span>
                   Export Project Data
