--- a/templates/controls/import_modal.html
+++ b/templates/controls/import_modal.html
@@ -15,6 +15,8 @@
         <option>JSON</option>
       </select>
     <button class="btn btn-primary" type="submit">Import</button>
+        <input type="checkbox" id="importcheck" name="importcheck" value="True">
+  <label for="importcheck">Import a new project</label>
   </form>
       </div>
     </div>
