--- a/templates/base.html
+++ b/templates/base.html
@@ -92,6 +92,7 @@
     {% include "bootstrap-helpers.html" %}
 
     {% include "portfolios/select-portfolio-modal.html" %}
+    {% include "edit-component-modal.html" %}
 
     <div id="invitation_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="invitation_modal_title" aria-hidden="true" data-url="{% url "send_invitation" %}">
       <div class="modal-dialog">
