--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -133,6 +133,30 @@ div.subtitle {
   </div> <!-- /col -->
 </div> <!-- /row -->
 
+{% block scripts %}
+    <script>
+        function show_import_project_modal(id, callback) {
+            var m = $('#import_project_modal');
+            $("#import_loading_spinner").hide();
+            m.modal();
+        }
+
+        function fillJSONContent(file) {
+            filecontents = $('#{{import_project_form.file.auto_id}}').prop('files')[0];
+            var reader = new FileReader();
+            reader.readAsText(filecontents);
+            reader.onload = function (e) {
+                $('#{{import_project_form.json_content.auto_id}}').val(e.target.result);
+            };
+        }
+
+        function show_spinner() {
+            $("#import_loading_spinner").show();
+        }
+    </script>
+{% endblock %}
+{% include "controls/import_project_modal.html" %}
+
 {% block modals %}
 {% endblock %}
 
